test/data/resolver/valid/edge_rebind_var_length_vs_fixed.cypher
MATCH (a:Person)-[r:KNOWS*1..3]->(b:Person) WITH r MATCH (c:Person)-[r:KNOWS]->(d:Person) RETURN r
